--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -12,6 +12,7 @@ banner:
     one_account: 'Login.gov: una sola cuenta para el gobierno'
     sign_in: Inicie sesión para gestionar su cuenta
     text: ¿Ya tiene una cuenta?
+    link: https://secure.login.gov/es
   one-account-for-govt:
     create: Cree una cuenta
     learn: Más información sobre cómo crear una cuenta
