--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -12,6 +12,7 @@ banner:
     one_account: Login.gov est le compte qui vous ouvre l’accès aux sites des autorités
     sign_in: Se connecter pour gérer votre compte
     text: Vous avez déjà un compte ?
+    link: https://secure.login.gov/fr
   one-account-for-govt:
     create: Créer un compte
     learn: Apprendre comment créer un compte
