--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -9,6 +9,7 @@ actions:
 banner:
   already-have-an-account:
     learn_more: Más información sobre cómo crear una cuenta
+    link: https://secure.login.gov/es
     one_account: 'Login.gov: una sola cuenta para el gobierno'
     sign_in: Inicie sesión para gestionar su cuenta
     text: ¿Ya tiene una cuenta?
