--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -281,7 +281,7 @@ nav:
         url: '#evaluation'
       - name: Known limitations
         url: '#known-limitations'
-    title: Accessibility statement
+    title: Accessibility
   anchor_to_top: Back to top
   become_a_partner: Become a partner
   business_inquiries:
