--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -270,7 +270,7 @@ nav:
         url: '#评估'
       - name: 已知局限
         url: '#已知局限'
-    title: 无障碍声明
+    title: 无障碍
   anchor_to_top: 回到顶部
   become_a_partner: 成为合作伙伴
   business_inquiries:
