--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -303,7 +303,7 @@ nav:
         url: '#évaluation'
       - name: Limites connues
         url: '#limites-connues'
-    title: Déclaration sur l’accessibilité
+    title: Accessibilité
   anchor_to_top: Retour en haut de la page
   become_a_partner: Devenir partenaire
   business_inquiries:
