--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -282,13 +282,9 @@ nav:
     sections:
       - name: Nuestro compromiso
         url: '#nuestro-compromiso'
-      - name: Estándares
-        url: '#estándares'
       - name: Evaluación
         url: '#evaluación'
-      - name: Limitaciones conocidas
-        url: '#limitaciones-conocidas'
-    title: Declaración de accesibilidad
+    title: Accessibilidad
   anchor_to_top: Volver al inicio
   become_a_partner: Conviértase en asociado
   business_inquiries:
