LG-14155: Update Chinese translation (#1318)
* Update translation

Co-authored-by: Zach Margolis <zachmargolis@users.noreply.github.com>

--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -345,7 +345,7 @@ nav:
   privacy_&_security: Privacidad y seguridad
   security: Seguridad
   security_experience: Security experience # partners site does not require translations
-  sign_in: Inicie sesión con
+  sign_in: 'Inicie sesión con {{APP_NAME}}'
   skip_nav: Saltar al contenido principal
   system_status: Estado del sistema Login.gov
   what_is_login_gov: ¿Qué es Login.gov?
