Update SBA DLAP to SBA

--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -84,7 +84,7 @@ contact_page:
       'PBGC-MyPBA': 'PBGC - MyPBA'
       'Peace Corps': Peace Corps
       'Railroad Retirement Board': Railroad Retirement Board
-      'SBA DLAP': SBA DLAP
+      'SBA': SBA
       'Securities and Exchange Commission': Securities and Exchange Commission
       'Social Security Administration (SSA)': Social Security Administration (SSA)
       'State of Arkansas': State of Arkansas
