--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -85,7 +85,7 @@ contact_page:
       'PBGC-MyPBA': PBGC - MyPBA
       'Peace Corps': Cuerpo de Paz
       'Railroad Retirement Board': Junta de Jubilación de Empleados Ferroviarios
-      'SBA DLAP': DLAP de la SBA
+      'SBA': SBA
       'Securities and Exchange Commission': Comisión de Bolsa y Valores
       'Social Security Administration (SSA)': Administración del Seguro Social (SSA)
       'State of Arkansas': estado de Arkansas
