--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -88,7 +88,7 @@ contact_page:
       'PBGC-MyPBA': PBGC - MyPBA
       'Peace Corps': Corps de la paix
       'Railroad Retirement Board': Conseil des retraites dans les chemins de fer
-      'SBA DLAP': SBA DLAP
+      'SBA': SBA
       'Securities and Exchange Commission': Commission des titres et de la bourse
       'Social Security Administration (SSA)': Administration de la Sécurité sociale (SSA)
       'State of Arkansas': État de l’Arkansas
