--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -82,7 +82,7 @@ contact_page:
       'PBGC-MyPBA': PBGC（退休金福利保障公司） - MyPBA
       'Peace Corps': 和平队
       'Railroad Retirement Board': 铁路退休委员会
-      'SBA DLAP': SBA （小企业管理局）DLAP
+      'SBA': SBA
       'Securities and Exchange Commission': 证券交易委员会
       'Social Security Administration (SSA)': 社会保障署（SSA）
       'State of Arkansas': 阿肯色州
