--- a/_config.yml
+++ b/_config.yml
@@ -64,12 +64,12 @@ collections:
   partners:
     output: true
     permalink: /:collection/:path/
+  program_updates:
+    output: true
+    permalink: /partners/program-updates/:path/
   partners_impact_stories:
     output: true
     permalink: /:collection/:path/
-  program_updates:
-    output: true
-    permalink: /partners/:collection/:path/    
   policy:
     output: true
     permalink: /:collection/:path/
