Add preview text var

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -268,5 +268,5 @@ collections:
       - { label: 'Language', name: 'lang', widget: 'hidden', default: 'en' }
       - { label: 'Title', name: 'title', widget: 'string', required: true }
       - { label: 'Date (Order)', name: 'date', widget: 'datetime', required: true }      
-      - { label: 'Entry Preview', name: 'preview', widget: 'markdown', required: true }
+      - { label: 'Preview text', name: 'preview', widget: 'markdown', required: true }
       - { label: 'Body', name: 'body', widget: 'markdown', required: true }
