--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -91,6 +91,7 @@ contact_page:
       'State of Arkansas': estado de Arkansas
       'State of California': estado de California
       'State of Colorado': estado de Colorado
+      'State of Maryland': Estado de Maryland
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': Programas para viajeros de confianza (Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': Agencia de Estados Unidos para el Desarrollo Internacional
       'U.S. Department of Agriculture': Departamento de Agricultura de Estados Unidos
