--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -94,6 +94,7 @@ contact_page:
       'State of Arkansas': État de l’Arkansas
       'State of California': État de la Californie
       'State of Colorado': État du Colorado
+      'State of Maryland': État du Maryland
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': Programmes pour voyageurs dignes de confiance (Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': Agence des États-Unis pour le développement international
       'U.S. Department of Agriculture': Département de l’Agriculture des États-Unis
