--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -88,6 +88,7 @@ contact_page:
       'State of Arkansas': 阿肯色州
       'State of California': 加利福尼亚州
       'State of Colorado': 科罗拉多州
+      'State of Maryland': 马里兰州
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': 受信任旅客计划（Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': 美国国际开发署
       'U.S. Department of Agriculture': 美国农业部
