--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -170,7 +170,7 @@ contact_page:
       personal_key: My personal key is not working
       personal_key_notification: I have received an alert about my personal key being used to sign in
       personal_key_setup: Personal key setup
-      phone_number_failure: I got a failure after entering my phone number
+      phone_number_failure: My phone number doesn't match records
       piv_cac: I am having trouble using my PIV/CAC to sign in
       privacy_and_security: Privacy and security
       recover_account: How do I sign into my account if I dont have my phone or personal key?
