--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -191,7 +191,7 @@ contact_page:
       site_navigation: No sé dónde ir para crear una cuenta
       state_issued_id_error: No se aceptó mi identificación emitida por el estado
       unwanted_otp: Estoy recibiendo códigos de seguridad de Login.gov que no he solicitado
-      verify_identity_error: Error al tratar de verificar mi identidad
+      verify_identity_error: Mi número del Seguro Social o mi dirección no coinciden con los registros
       wrong_account_update: Actualización incorrecta de la cuenta
     title: Enviar un ticket de ayuda
     topics:
