--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -191,9 +191,9 @@ contact_page:
       signing_in: 登录进入你的 Login.gov 账户
       verifying_identity: 验证你的身份
 feedback_form:
-  'no': '不'
+  'no': '没有'
   question: '这篇文章对你有帮助吗？'
-  'yes': 对
+  'yes': '有'
 global:
   language: 语言
   locales:
@@ -291,7 +291,7 @@ nav:
   get_started: Get started # partners site does not require translations
   groups:
     about_login_gov: About Login.gov # partners site does not require translations
-    agencies: 针对机构的
+    agencies: 针对机构
     learn: 学习
     partners: For partners # partners site does not require translations
     support: 支持
