--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -126,6 +126,7 @@ contact_page:
     reset: Clear form
     submit: Submit
     subtopics:
+      account_deactivated: My account has been deactivated
       account_locked: My account is locked for 6 hours
       add_family_member: How do I add a family member to my Login.gov account?
       agency_app: Agency app issue
