Add PSHB to agencies dropdown
Now that we have the translations for PSHB, we can add them to the
agency dropdown.

In the future, it would be nice to be able to publish the English
version first, and then follow up with the translations when they're
ready.

Closes LG-14744

--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -83,6 +83,7 @@ contact_page:
       'Pay.gov': Pay.gov
       'PBGC-MyPBA': 'PBGC - MyPBA'
       'Peace Corps': Peace Corps
+      'Postal Service Health Benefits (PSHB)': Postal Service Health Benefits (PSHB)
       'Railroad Retirement Board': Railroad Retirement Board
       'SBA': SBA
       'Securities and Exchange Commission': Securities and Exchange Commission
