--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -84,6 +84,7 @@ contact_page:
       'Pay.gov': Pay.gov
       'PBGC-MyPBA': PBGC - MyPBA
       'Peace Corps': Cuerpo de Paz
+      'Postal Service Health Benefits (PSHB)': Beneficios de salud del servicio postal (PSHB)
       'Railroad Retirement Board': Junta de Jubilación de Empleados Ferroviarios
       'SBA': SBA
       'Securities and Exchange Commission': Comisión de Bolsa y Valores
