--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -87,6 +87,7 @@ contact_page:
       'Pay.gov': Pay.gov
       'PBGC-MyPBA': PBGC - MyPBA
       'Peace Corps': Corps de la paix
+      'Postal Service Health Benefits (PSHB)': Prestations de santé des services postaux (PSHB)
       'Railroad Retirement Board': Conseil des retraites dans les chemins de fer
       'SBA': SBA
       'Securities and Exchange Commission': Commission des titres et de la bourse
