--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -81,6 +81,7 @@ contact_page:
       'Pay.gov': Pay.gov
       'PBGC-MyPBA': PBGC（退休金福利保障公司） - MyPBA
       'Peace Corps': 和平队
+      'Postal Service Health Benefits (PSHB)': 美国邮局医疗福利（Postal Service Health Benefits） (PSHB)
       'Railroad Retirement Board': 铁路退休委员会
       'SBA': SBA
       'Securities and Exchange Commission': 证券交易委员会
